--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,8 @@
-<h1> Rensselaer Study Network </h1>
-<%= link_to "Sign In", sign_in_path %>
-<%= link_to "Sign Out", sign_out_path %>
+
+<div class="jumbotron">
+  <div class="container">
+    <h3> It's easy to connect with your classmates! </h3>
+    <p> Just use your RCS ID! </p>
+    <%= link_to "Begin", sign_in_path, :class => "btn btn-primary btn-lg" %>
+  </div>
+</div>
