--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -1,3 +1,11 @@
+$navbarLinkColor: white;
+
+$navbarBackgroundHighlight: #b42121;
+$navbarBackground: darken(#5e1111, 1%);
+
+$btnBackgroundHighlight: #b42121;
+$btnBackground: darken(#5e1111, 1%);
+
 @import "bootstrap";
 body { padding-top: 60px; }
 @import "bootstrap-responsive";
