--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,6 +1,9 @@
 <%= link_to "Rensselaer Study Network", root_path, :class => 'brand' %>
 <ul class="nav">
   <% if signed_in? %>
+    <li>
+      <%= link_to "Profile", sign_in_path %>
+    </li>
     <li> 
       <%= link_to "Sign Out", sign_out_path %>
     </li>
