--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -5,7 +5,9 @@
   <div class="panel-body">
     <% if @courses %>
       <% @courses.each do |course| %>
-      <p><%= course.title %></p>
+      <p><%= link_to course.abrev_name + " " + course.title +  " " + 
+          course.crn + " " + course.level + " " + course.section, course
+          %> </p>
       <% end %>
     <% end %>
   </div>
