View students registered for same courses

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,9 +1,9 @@
 <div class="panel panel-default">
   <div class="panel-heading">
     <h3 class="panel-title"><%= @course.abrev_name + " - " + @course.title %></h3>
-    <h5><%= "Level: " + @course.level %></h5>
-    <h5><%= "Section: " + @course.section %></h5>
-    <h5><%= "CRN: " + @course.crn %></h5>
+    <h5><%= "Level: " + @course.level %> | 
+        <%= "Section: " + @course.section %> |
+        <%= "CRN: " + @course.crn %></h5>
   </div>
 </div>
 <div class="panel panel-default">
@@ -11,10 +11,16 @@
     <h3 class="panel-title">Students</h3>
   </div>
   <div class="panel-body">
-    <% if @users %>
+    <% if @users.length > 0 %>
+      <ul class="unstyled inline">
       <% @users.each do |user| %>
-        <p><%= @user.real_name %></p>
+        <% if user.id == get_signedin_id %>
+          <li><%= link_to "You", user %></li>
+        <% else %>
+          <li><%= link_to user.real_name, user %></li>
+        <% end %>
       <% end %>
+      </ul>
     <% else %>
       <p>No Connections Found :( </p>
     <% end %>
