--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -2,7 +2,7 @@
 <ul class="nav">
   <% if signed_in? %>
     <li>
-      <%= link_to "Profile", sign_in_path %>
+      <%= link_to get_signedin_name + "'s Profile", sign_in_path %>
     </li>
     <li> 
       <%= link_to "Sign Out", sign_out_path %>
