--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,30 +1,45 @@
-<h3> Welcome <%= if !@user.real_name then @user.username else @user.real_name end %> </h3>
+<!-- User Show Page -->
+<% if can_edit? and not is_admin? %><h3> Welcome <%= if !@user.real_name then @user.username else @user.real_name end %> </h3><% end %>
+
+<!-- Registered Courses Panel -->
+<% if can_edit? or is_admin? %>
 <div class="panel panel-default">
   <div class="panel-heading">
     <h3 class="panel-title">Your Classes</h3>
   </div>
   <div class="panel-body">
-    <% if !@classes %>
-      <%= link_to "+ Add Classes", new_user_registration_path(user_id: params[:id]), :class => "btn btn-primary btn-lg" %>
-    <% else %> 
-      <% @classes.each do |aclass| %>
-        <p><%= aclass.course %></p>
-      <% end %>
+    <ul class="unstyled nav">
+    <% @classes.each do |aclass| %>
+      <li class="course-link"><%= link_to aclass.course.title + " - " + aclass.course.level + " | Section: " + aclass.course.section, aclass.course %>
+      </li>
     <% end %>
+    </ul>
+    <%= link_to "+ Add Classes", new_user_registration_path(user_id: params[:id]), :class => "btn btn-primary btn-lg" %>
   </div>
 </div>
 <br />
+<% end %>
+
+<!-- Account Details Panel -->
 <div class="panel panel-default">
   <div class="panel-heading">
-    <h3 class="panel-title">Account Details</h3>
+    <% if can_edit? or is_admin? %>
+      <h3 class="panel-title">Account Details for <%= if @user.real_name then @user.real_name else @user.username end %> </h3>
+    <% else %>
+      <h3 class="panel-title"> <%= if @user.real_name then @user.real_name else @user.username end %> </h3>
+    <% end %>
   </div>
   <div class="panel-body">
-    <p> RCS ID: <%= @user.username %> </p>
+    <% if can_edit? %>
+      <p> RCS ID: <%= @user.username %> </p>
+    <% end %>
     <p> Name: <%= @user.real_name %> </p>
     <p> Year: <%= @user.year %> </p>
-    <%= link_to "Edit Details", edit_user_path(@user), :class => "btn btn-primary btn-lg" %>
-    <hr />
-    <p> Last Updated: <%= @user.updated_at.to_date %> </p>
-    <p> Created: <%= @user.created_at.to_date %> </p>
+    <% if can_edit? %>
+      <%= link_to "Edit Details", edit_user_path(@user), :class => "btn btn-primary btn-lg" %>
+      <hr />
+      <p> Last Updated: <%= @user.updated_at.to_date %> </p>
+      <p> Created: <%= @user.created_at.to_date %> </p>
+    <% end %>
   </div>
 </div>
