User opt-out functionality

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -7,3 +7,11 @@
     padding: 20px;
   }
 }
+
+.discontinue-btn {
+  color: red;
+  &:hover {
+    text-decoration: none;
+    color: orange;
+  }
+}
