--- a/app/assets/stylesheets/courses.css.scss
+++ b/app/assets/stylesheets/courses.css.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the courses controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.course-link {
+  line-height: 14px;
+  margin: 20px;
+  a {
+    color: rgb(51, 51, 51);
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 14px;
+    &:hover {
+      background-color: rgb(201, 201, 201);
+      color: rgb(11, 11, 11);
+      text-decoration: none;
+    }
+  }
+}
