--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -1,11 +1,27 @@
-<p> RPI class list updated: </p>
-<hr>
-<% @classes.each do |dept| %>
-  <% dept.each_index do |i| %>
-    <%= dept[i] %>
-    <% if i%2 != 0 %>
-      <br>
-    <% end %>
-  <% end %>
-  <hr>
+<h4> New Course </h4>
+
+<%= form_for :course, url: course_path(@course) do |f| %>
+  <p>
+    <%= f.label :title, "Title" %>
+    <%= f.text_field :title %>
+  </p>
+  <p>
+    <%= f.label :crn, "CRN Code" %>
+    <%= f.text_field :crn %>
+  </p>
+  <p> 
+    <%= f.label :abrev_name, "Department Abreviation" %>
+    <%= f.text_field :abrev_name %>
+  </p>
+  <p>
+    <%= f.label :level, "Level Number" %>
+    <%= f.text_field :level %>
+  </p>
+  <p>
+    <%= f.label :section, "Section Number" %>
+    <%= f.text_field :section %>
+  </p>
+  <p>
+    <%= f.submit %>
+  </p>
 <% end %>
