--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
       <div class="intro">
         <h3> It's easy to connect with your classmates! </h3>
         <p> Just use your RCS ID! </p>
-        <%= link_to "Begin", sign_in_path, :class => "btn btn-primary btn-lg" %>
+        <%= link_to "Begin", sign_in_path, :class => "btn btn-primary" %>
       </div>
     <% else %>
       <div class="intro">
