--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -1,3 +1,5 @@
+body { padding-top: 50px; }
+
 $navbarLinkColor: white;
 
 $navbarBackgroundHighlight: #b42121;
@@ -6,6 +8,53 @@ $navbarBackground: darken(#5e1111, 1%);
 $btnBackgroundHighlight: #b42121;
 $btnBackground: darken(#5e1111, 1%);
 
-@import "bootstrap";
-body { padding-top: 60px; }
-@import "bootstrap-responsive";
+$bgDefault      : #eb1524;
+$bgHighlight    : #b6a8a8;
+$colDefault     : #ecf0f1;
+$colHighlight   : #31311a;
+.navbar-default {
+    background-color: $bgDefault;
+    border-color: $bgHighlight;
+    .navbar-brand {
+        color: $colDefault;
+        &:hover, &:focus {
+            color: $colHighlight; }}
+    .navbar-nav {
+        > li {
+            > a {
+                color: $colDefault;
+                &:hover, &:focus {
+                    color: $colHighlight;   }}}
+        .active {
+            > a, > a:hover, > a:focus {
+                color: $colHighlight;
+                background-color: $bgHighlight; }}
+        .open {
+            > a, > a:hover, > a:focus {
+                color: $colHighlight;
+                background-color: $bgHighlight;
+                .caret {
+                    border-top-color: $colHighlight;
+                    border-bottom-color: $colHighlight; }}}
+        > .dropdown {
+            > a {
+                .caret {
+                    border-top-color: $colDefault;
+                    border-bottom-color: $colDefault; }
+                &:hover, &:focus {
+                    .caret {
+                        border-top-color: $colHighlight;
+                        border-bottom-color: $colHighlight; }}}}}
+    .navbar-toggle {
+        border-color: $bgHighlight;
+        &:hover, &:focus {
+            background-color: $bgHighlight; }
+        .icon-bar {
+            background-color: $colDefault; }}}
+@media (max-width: 767px) {
+    .navbar-default .navbar-nav .open .dropdown-menu > li > a {
+        color: $colDefault;
+        &:hover, &:focus {
+            color: $colHighlight;
+            background-color: $bgHighlight; }}
+}
