--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,15 +1,28 @@
-<%= link_to "Rensselaer Study Network", root_path, :class => 'brand' %>
-<ul class="nav">
-  <% if signed_in? %>
-    <li>
-      <%= link_to get_signedin_name + "'s Profile", sign_in_path %>
-    </li>
-    <li> 
-      <%= link_to "Sign Out", sign_out_path %>
-    </li>
-  <% else %>
-    <li>
-      <%= link_to "Sign In", sign_in_path %>
-    </li>
-  <% end %>
-</ul>
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#rsn-navbar-collapse">
+      <span class="sr-only">Toggle Navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+    <%= link_to "Rensselaer Study Network", root_path, :class => 'navbar-brand' %>
+  </div>
+
+  <div class="collapse navbar-collapse" id="rsn-navbar-collapse">
+    <ul class="nav navbar-nav">
+    <% if signed_in? %>
+      <li>
+        <%= link_to get_signedin_name + "'s Profile", sign_in_path %>
+      </li>
+      <li> 
+        <%= link_to "Sign Out", sign_out_path %>
+      </li>
+      <% else %>
+      <li>
+        <%= link_to "Sign In", sign_in_path %>
+      </li>
+    <% end %>
+    </ul>
+  </div>
+</nav>
