--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,15 +1,8 @@
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
   <div class="navbar-header">
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#rsn-navbar-collapse">
-      <span class="sr-only">Toggle Navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
     <%= link_to "Rensselaer Study Network", root_path, :class => 'navbar-brand' %>
   </div>
-
-  <div class="collapse navbar-collapse" id="rsn-navbar-collapse">
+  <div class="navbar-default">
     <ul class="nav navbar-nav">
     <% if signed_in? %>
       <li>
