--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -21,7 +21,7 @@
     <%= f.select :year, User::YEARS, value: @user.year %>
   </p>
   <p>
-    <%= f.submit :class => "btn btn-primary btn-lg" %>
+    <%= f.submit :class => "btn btn-primary" %>
   </p>
 <% end %>
 
