--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,19 +1,33 @@
-<div class="jumbotron">
-  <div class="container">
-    <div class="logo">
-      <%= image_tag "rpi_logo.svg" %>
+<div class="panel panel-default">
+  <div class="panel-body">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <%= image_tag "rpi_logo.svg" %>
+        </div>
+        <div class="col-md-8">
+          <% if !signed_in? %>
+            <h3> It's easy to connect with your classmates! </h3>
+            <p> Just use your RCS ID! </p>
+            <%= link_to "Begin", sign_in_path, :class => "btn btn-primary" %>
+          <% else %>
+            <div class="col-md-12">
+              <h3> You're signed in as <%= get_signedin_name %> </h3>
+              <!-- Activity Feed -->
+                <hr />
+                <h3 class="panel-title"> Recent Posts in Your Network </h3>
+                <br />
+                <div class="container">
+                  <div class="row">
+                    <% recent_posts.each do |rPost| %>
+                      <%= render partial: 'posts/post_tile', locals: { post: rPost, course_id: rPost.course_id, post_id: rPost.id } %>
+                    <% end %>
+                  </div>
+                </div>
+            </div>
+          <% end %>
+        </div>
+      </div>
     </div>
-    <% if !signed_in? %>
-      <div class="intro">
-        <h3> It's easy to connect with your classmates! </h3>
-        <p> Just use your RCS ID! </p>
-        <%= link_to "Begin", sign_in_path, :class => "btn btn-primary" %>
-      </div>
-    <% else %>
-      <div class="intro">
-        <h3> You're signed in! </h3>
-        <p> Start networking </p>
-      </div>
-    <% end %>
   </div>
 </div>
