--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -6,7 +6,7 @@
     <ul class="nav navbar-nav">
     <% if signed_in? %>
       <li>
-        <%= link_to "Profile", sign_in_path %>
+        <%= link_to "Profile", user_path(get_signedin_id) %>
       </li>
       <li> 
         <%= link_to "Sign Out", sign_out_path %>
