--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,27 +1,29 @@
-<h3> Editing <%= link_to @user.username, @user %> </h3>
-<%= link_to ' < Back', users_path %>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title"> Editing <%= @user.username %> </h3>
+    <br />
+    <%= link_to ' < Back to profile', users_path %>
+  </div>
+  <div class="panel-body">
+  <%= form_for :user, url: user_path(@user), method: :patch do |f| %>
+    <br>
+    <p>
+      <%= f.label :real_name %>
+      <%= f.text_field :real_name, value: @user.real_name %>
+    </p>
+    <p>
+      <%= f.label :email %>
+      <%= f.text_field :email, value: @user.email %>
+    </p>
+    <p> 
+      <%= f.label :year %>
+      <%= f.select :year, User::YEARS, value: @user.year %>
+    </p>
+    <p>
+      <%= f.submit :class => "btn btn-primary btn-xs" %>
+    </p>
+  </div>
+  <% end %>
+</div>
 
-<%= form_for :user, url: user_path(@user), method: :patch do |f| %>
-  
-  <br>
-  <p>
-    <%= f.label :username, "RCS ID" %>
-    <%= f.text_field :username, value: @user.username%>
-  </p>
-  <p>
-    <%= f.label :real_name %>
-    <%= f.text_field :real_name, value: @user.real_name %>
-  </p>
-  <p>
-    <%= f.label :email %>
-    <%= f.text_field :email, value: @user.email %>
-  </p>
-  <p> 
-    <%= f.label :year %>
-    <%= f.select :year, User::YEARS, value: @user.year %>
-  </p>
-  <p>
-    <%= f.submit :class => "btn btn-primary" %>
-  </p>
-<% end %>
 
