--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,48 +1,76 @@
-<!-- User Show Page -->
-
-<!-- Registered Courses Panel -->
+<!-- User Logged in-->
 <% if can_edit? or is_admin? %>
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <h3 class="panel-title">Your Classes</h3>
+<div class="row">
+<!-- Registered Courses Panel -->
+  <div class="col-md-8">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">Your Classes</h3>
+      </div>
+      <div class="panel-body">
+        <ul class="unstyled nav">
+        <% @classes.each do |aclass| %>
+          <li class="course-link">
+            <%= link_to aclass.course.title + " - " + aclass.course.level + " | Section: " + aclass.course.section, aclass.course %>
+          </li>
+        <% end %>
+        </ul>
+        <%= link_to "+ Add Classes", new_user_registration_path(user_id: params[:id]), :class => "btn btn-primary" %>
+      </div>
+    </div>
   </div>
-  <div class="panel-body">
-    <ul class="unstyled nav">
-    <% @classes.each do |aclass| %>
-      <li class="course-link"><%= link_to aclass.course.title + " - " + aclass.course.level + " | Section: " + aclass.course.section, aclass.course %>
-      </li>
-    <% end %>
-    </ul>
-    <%= link_to "+ Add Classes", new_user_registration_path(user_id: params[:id]), :class => "btn btn-primary" %>
-  </div>
-</div>
-<% end %>
 
 <!-- Account Details Panel -->
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <% if can_edit? or is_admin? %>
-      <h3 class="panel-title">Account Details for <%= if @user.real_name then @user.real_name else @user.username end %> </h3>
-    <% else %>
-      <h3 class="panel-title"> <%= if @user.real_name then @user.real_name else @user.username end %> </h3>
-    <% end %>
-  </div>
-  <div class="panel-body">
-    <% if can_edit? %>
-      <p> RCS ID: <%= @user.username %> </p>
-    <% end %>
-    <p> Name: <%= @user.real_name %> </p>
-    <p> Email: <%= @user.email %> </p>
-    <p> Year: <%= @user.year %> </p>
-    <% if can_edit? %>
-      <%= link_to "Edit Details", edit_user_path(@user), :class => "btn btn-primary" %>
-      <hr />
-      <p> Last Updated: <%= @user.updated_at.to_date %> </p>
-      <p> Created: <%= @user.created_at.to_date %> </p>
-    <% end %>
-    <% if can_edit? or is_admin? %>
-      <hr>
-      <%= link_to "Discontinue Account", user_path(@user), method: :delete, data: { confirm: 'Are you sure?'}, :class => 'discontinue-btn' %>
-    <% end %>
+  <div class="col-md-4">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">Account Details for <%= if @user.real_name then @user.real_name else @user.username end %> </h3>
+      </div>
+      <div class="panel-body">
+        <p> RCS ID: <%= @user.username %> </p>
+        <p> Name: <%= @user.real_name %> </p>
+        <p> Email: <%= @user.email %> </p>
+        <p> Year: <%= @user.year %> </p>
+        <%= link_to "Edit Details", edit_user_path(@user), :class => "btn btn-primary" %>
+        <hr />
+        <p> Last Updated: <%= @user.updated_at.to_date %> </p>
+        <p> Created: <%= @user.created_at.to_date %> </p>
+        <hr>
+        <%= link_to "Discontinue Account", user_path(@user), method: :delete, data: { confirm: 'Are you sure?'}, :class => 'discontinue-btn' %>
+      </div>
+    </div>
   </div>
 </div>
+
+<% else %>
+<!-- User not logged in -->
+<div class="row">
+  <!-- Account Details Panel -->
+  <div class="col-md-4">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title"> <%= if @user.real_name then @user.real_name else @user.username end %> </h3>
+      </div>
+      <div class="panel-body">
+        <p> Email: <%= @user.email %> </p>
+        <p> Year: <%= @user.year %> </p>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-8">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title"> Classes </h3>
+      </div>
+        <ul class="unstyled nav">
+        <% @classes.each do |aclass| %>
+          <li class="course-link">
+            <%= link_to aclass.course.title + " - " + aclass.course.level + " | Section: " + aclass.course.section, aclass.course %>
+          </li>
+        <% end %>
+      </ul>
+    </div>
+  </div>
+</div>
+
+<% end %>
