--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <!-- User Logged in-->
-<% if can_edit? or is_admin? %>
+<% if can_edit? %>
 <div class="row">
 <!-- Registered Courses Panel -->
   <div class="col-md-8">
