--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -24,6 +24,14 @@
     </p>
   </div>
   <% end %>
+
+  <hr />
+  <% @registrations.each do |r| %>
+    <p>  </p>
+  <% end %>
+
+  <hr />
+  <%= link_to "Discontinue Account", user_path(@user), method: :delete, data: { confirm: 'Are you sure?'}, :class => 'discontinue-btn' %>
 </div>
 
 
