--- a/app/assets/stylesheets/courses.css.scss
+++ b/app/assets/stylesheets/courses.css.scss
@@ -1,7 +1,3 @@
-// Place all the styles related to the courses controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
-
 .course-link {
   line-height: 14px;
   margin: 20px;
@@ -14,4 +10,14 @@
       text-decoration: none;
     }
   }
+}
+
+.profile-pic-tile {
+  img {
+    width: 34px;
+    height: 34px;
+  }
+  text-align: center;
+  width: 34px;
+  margin: 1px;
 }
