--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -5,7 +5,6 @@
         <div class="panel-heading">
           <h3 class="panel-title"><%= @course.abrev_name + " - " + @course.title %></h3>
           <h5><%= "Level: " + @course.level %> | 
-              <%= "Section: " + @course.section %> |
               <%= "CRN: " + @course.crn %></h5>
         </div>
       </div>
@@ -37,13 +36,18 @@
         <div class="panel-body">
           <h3 class="panel-title">Connections</h3><hr />
           <% if @users.length > 0 %>
-            <div class="list-group">
             <% @users.each do |user| %>
               <% if user.id != get_signedin_id %>
-                <%= link_to user.real_name, user, class: 'list-group-item'  %>
+                <div class="media">
+                  <a class="pull-left" href=<%= "/users/#{user.id}" %>>
+                    <%= image_tag avatar_url(user), :class => 'img-responsive', width: '34px', height: '34px' %> 
+                  </a>
+                  <div class="media-body">
+                    <h4 class="media-heading"><%= link_to user.real_name, user %></h4>
+                  </div>
+                </div>
               <% end %>
             <% end %>
-            </ul>
           <% else %>
             <p>No Connections Found :( </p>
           <% end %>
