--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -36,7 +36,7 @@
         <ul class="unstyled nav">
         <% @classes.each do |aclass| %>
           <li class="course-link">
-            <%= link_to aclass.course.title + " - " + aclass.course.level + " | Section: " + aclass.course.section, aclass.course %>
+            <%= link_to aclass.course.title + " - " + Course.find(aclass.course_id).abrev_name + " " + aclass.course.level, aclass.course %>
           </li>
         <% end %>
         </ul>
@@ -75,7 +75,7 @@
         <ul class="unstyled nav">
         <% @classes.each do |aclass| %>
           <li class="course-link">
-            <%= link_to aclass.course.title + " - " + aclass.course.level + " | Section: " + aclass.course.section, aclass.course %>
+            <%= link_to aclass.course.title + " - " +  Course.find(aclass.course_id).abrev_name + " " + aclass.course.level, aclass.course %>
           </li>
         <% end %>
       </ul>
