--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,3 +1,4 @@
+<%= link_to '<< Back to course', course_path(@course), :class => 'btn btn-xs' %><br /> <br />
 <div class="panel panel-default">
   <div class="panel-heading">
     <h3 class="panel-title">New post for <%= @course.title %></h3>
